--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -12,6 +12,7 @@ repository = "https://github.com/wafflespeanut/paperclip"
 [dependencies]
 actix-web = { version = "2.0", optional = true }
 actix-http = { version = "1.0", optional = true }
+actix-multipart = { version = "0.2", optional = true }
 chrono = { version = "0", optional = true }
 failure = "0.1"
 heck = { version = "0.3", optional = true }
