--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -20,7 +20,7 @@ lazy_static = "1.3"
 log = { version = "0.4", optional = true }
 mime = { git = "https://github.com/hyperium/mime", features = ["serde1"] }
 paperclip-macros = { path = "../macros", version = "0.2.0" }
-parking_lot = "0.10"
+parking_lot = { version = "0.10", features = ["serde"] }
 rust_decimal = { version = "1", optional = true }
 regex = "1.1"
 serde = { version = "1.0", features = ["derive", "rc"] }
