--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,6 @@ required-features = ["cli"]
 
 [dependencies]
 env_logger = { version = "0.7", optional = true }
-failure = "0.1"
-failure_derive = "0.1"
 git2 = { version = "0.13", optional = true }
 heck = { version = "0.3", optional = true }
 http = { version = "0.2", optional = true }
@@ -42,6 +40,8 @@ serde_yaml = "0.8"
 structopt = { version = "0.2", optional = true }
 tinytemplate = { version = "1.0", optional = true }
 url = "1.7"
+thiserror = "1.0.19"
+anyhow = "1.0.31"
 
 [dev-dependencies]
 actix-rt = "1.0"
