--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -14,7 +14,6 @@ actix-web = { version = "2.0", optional = true }
 actix-http = { version = "1.0", optional = true }
 actix-multipart = { version = "0", optional = true }
 chrono = { version = "0", optional = true }
-failure = "0.1"
 heck = { version = "0.3", optional = true }
 lazy_static = "1.3"
 log = { version = "0.4", optional = true }
@@ -27,6 +26,7 @@ serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 serde_yaml = "0.8"
 uuid = { version = "0", optional = true }
+thiserror = "1.0.19"
 
 [features]
 actix = ["v2", "actix-http", "actix-web"]
