--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "paperclip-core"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
 edition = "2018"
 description = "Core types and traits for paperclip OpenAPI tooling library"
@@ -17,8 +17,8 @@ chrono = { version = "0", optional = true }
 heck = { version = "0.3", optional = true }
 lazy_static = "1.3"
 log = { version = "0.4", optional = true }
-mime = { git = "https://github.com/hyperium/mime", features = ["serde1"] }
-paperclip-macros = { path = "../macros", version = "0.2.0" }
+mime = { git = "https://github.com/hyperium/mime", rev = "938484de95445a2af931515d2b7252612c575da7", features = ["serde1"] }
+paperclip-macros = { path = "../macros", version = "0.3.0" }
 parking_lot = { version = "0.10", features = ["serde"] }
 rust_decimal = { version = "1", optional = true }
 regex = "1.1"
