--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -17,7 +17,7 @@ chrono = { version = "0", optional = true }
 heck = { version = "0.3", optional = true }
 lazy_static = "1.3"
 log = { version = "0.4", optional = true }
-mime = { git = "https://github.com/hyperium/mime", rev = "938484de95445a2af931515d2b7252612c575da7", features = ["serde1"] }
+mime = "0.3"
 paperclip-macros = { path = "../macros", version = "0.3.0" }
 parking_lot = { version = "0.10", features = ["serde"] }
 rust_decimal = { version = "1", optional = true }
