--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,6 @@ git2 = { version = "0.13", optional = true }
 heck = { version = "0.3", optional = true }
 http = { version = "0.2", optional = true }
 itertools = "0.9"
-lazy_static = { version = "1.3", optional = true }
 log = { version = "0.4", optional = true }
 paperclip-actix = { path = "plugins/actix-web", version = "0.2.1", optional = true }
 paperclip-core = { path = "core", version = "0.2.1" }
@@ -42,6 +41,7 @@ tinytemplate = { version = "1.0", optional = true }
 url = "1.7"
 thiserror = "1.0.19"
 anyhow = "1.0.31"
+once_cell = "1.4.0"
 
 [dev-dependencies]
 actix-rt = "1.0"
@@ -52,12 +52,14 @@ futures = "0.3"
 uuid_dev = { version = "0.8", features = ["serde"], package = "uuid" }
 reqwest = { version = "0.10", features = ["blocking", "json"] }
 log = { version = "0.4", features = ["kv_unstable"] }
+insta = "0.16.1"
+env_logger = "0.7.1"
 
 [features]
 actix = ["paperclip-macros/actix", "paperclip-actix", "v2"]
 actix-nightly = ["actix", "paperclip-actix/nightly", "v2"]
 cli = ["env_logger", "structopt", "git2", "v2", "codegen"]
-codegen = ["heck", "http", "lazy_static", "log", "regex", "tinytemplate", "paperclip-core/codegen"]
+codegen = ["heck", "http", "log", "regex", "tinytemplate", "paperclip-core/codegen"]
 # codegen-fmt = ["codegen", "rustfmt-nightly"]
 v2 = ["paperclip-macros/v2", "paperclip-core/v2"]
 
@@ -74,3 +76,15 @@ members = [
     "macros",
     "plugins/actix-web",
 ]
+
+[[test]]
+name = "test_app"
+required-features = ["actix"]
+
+[[test]]
+name = "test_codegen"
+required-features = ["v2", "codegen"]
+
+[[test]]
+name = "test_errors"
+required-features = ["v2", "codegen"]
