--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -15,7 +15,7 @@ actix-http = { version = "1.0", optional = true }
 actix-multipart = { version = "0", optional = true }
 chrono = { version = "0", optional = true }
 heck = { version = "0.3", optional = true }
-lazy_static = "1.3"
+once_cell = "1.4.0"
 log = { version = "0.4", optional = true }
 mime = "0.3"
 paperclip-macros = { path = "../macros", version = "0.3.1" }
