--- a/plugins/actix-web/Cargo.toml
+++ b/plugins/actix-web/Cargo.toml
@@ -13,11 +13,11 @@ repository = "https://github.com/wafflespeanut/paperclip"
 futures = "0.3"
 actix-service = "1.0"
 actix-web = "2.0"
-lazy_static = "1.3"
 paperclip-core = { path = "../../core", version = "0.2.1", features = ["actix"] }
 paperclip-macros = { path = "../../macros", version = "0.3.1", features = ["actix"] }
 parking_lot = "0.11"
 serde_json = "1.0"
+once_cell = "1.4.0"
 
 [features]
 nightly = ["paperclip-core/actix", "paperclip-core/nightly"]
