--- a/tests/pet-v2.yaml
+++ b/tests/pet-v2.yaml
@@ -362,6 +362,9 @@ paths:
           type: array
           items:
             type: integer
+      responses:
+        '200':
+          $ref: '#/responses/StatusResponse'
   /test/upload:
     put:
       requestBody:
