api_v2_operation macros parses docs into summary and description * Moved implementation under feature actix-operations * Parses first line of docs into summary and other lines into description

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -34,3 +34,4 @@ actix = ["v2", "actix-http", "actix-web", "pin-project"]
 codegen = ["v2", "heck", "log"]
 nightly = ["paperclip-macros/nightly"]
 v2 = ["paperclip-macros/v2"]
+actix-operation = ["actix"]
