--- a/plugins/actix-web/Cargo.toml
+++ b/plugins/actix-web/Cargo.toml
@@ -18,7 +18,9 @@ paperclip-macros = { path = "../../macros", version = "0.3.2", features = ["acti
 parking_lot = ">=0.10,<0.12"
 serde_json = "1.0"
 once_cell = "1.4.0"
+serde_qs = { version = "0.6", optional = true, features = ["actix"] }
 
 [features]
 nightly = ["paperclip-core/actix", "paperclip-core/nightly"]
 normalize = []
+qs = ["serde_qs"]
