Deps: allow also actix-web 3.0 in addition to 2.0
Actix 3.0 has been recently released. It seems that paperclip (v0.4.1)
builds just fine against both actix-web 2.0 and 3.0
(and their dependent libs).

So just relax the dependency and let downstream crates choose which major
version of actix they pull.

I've tested this with downstream crates requiring both actix 2.0 and 3.0,
works wel. YMMV.

--- a/plugins/actix-web/Cargo.toml
+++ b/plugins/actix-web/Cargo.toml
@@ -12,7 +12,7 @@ repository = "https://github.com/wafflespeanut/paperclip"
 [dependencies]
 futures = "0.3"
 actix-service = "1.0"
-actix-web = "2.0"
+actix-web = ">=2.0,<4"
 paperclip-core = { path = "../../core", version = "0.3.0", features = ["actix"] }
 paperclip-macros = { path = "../../macros", version = "0.4.0", features = ["actix"] }
 parking_lot = ">=0.10,<0.12"
