--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -10,8 +10,8 @@ homepage = "https://github.com/wafflespeanut/paperclip"
 repository = "https://github.com/wafflespeanut/paperclip"
 
 [dependencies]
-actix-web = { version = "2.0", optional = true }
-actix-http = { version = "1.0", optional = true }
+actix-web = { version = ">=2.0,<4", optional = true }
+actix-http = { version = ">=1.0,<3", optional = true }
 actix-multipart = { version = "0", optional = true }
 chrono = { version = "0", optional = true }
 heck = { version = "0.3", optional = true }
