--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -13,6 +13,7 @@ repository = "https://github.com/wafflespeanut/paperclip"
 proc-macro = true
 
 [dependencies]
+mime = "0.3"
 proc-macro2 = "1.0"
 proc-macro-error = "1.0"
 quote = "1.0"
