--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -28,6 +28,7 @@ serde_json = "1.0"
 serde_yaml = "0.8"
 uuid = { version = "0", optional = true }
 thiserror = "1.0.19"
+serde_qs = { version = "0.6", optional = true, features = ["actix"] }
 
 [features]
 actix = ["v2", "actix-http", "actix-web", "pin-project"]
