--- a/plugins/actix-web/Cargo.toml
+++ b/plugins/actix-web/Cargo.toml
@@ -18,7 +18,9 @@ paperclip-macros = { path = "../../macros", version = "0.4.0", features = ["acti
 parking_lot = ">=0.10,<0.12"
 serde_json = "1.0"
 once_cell = "1.4.0"
+askama = { version = "0.10.3", optional = true }
 
 [features]
 nightly = ["paperclip-core/actix", "paperclip-core/nightly"]
 normalize = []
+swagger-ui = ["askama"]
