--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,39 +28,37 @@ paperclip-actix = { path = "plugins/actix-web", version = "0.2.2", optional = tr
 paperclip-core = { path = "core", version = "0.2.2" }
 paperclip-macros = { path = "macros", version = "0.3.2", optional = true }
 parking_lot = { version = ">=0.10,<0.12" }
-regex = { version = "1.1", optional = true }
+regex = { version = "1.3", optional = true }
 reqwest = { version = "0.10", features = ["blocking"], optional = true }
-# rustfmt-nightly = { version = "1.2.2", optional = true }
 semver = ">=0.9, <0.12"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 serde_yaml = "0.8"
-structopt = { version = "0.2", optional = true }
-tinytemplate = { version = "1.0", optional = true }
+structopt = { version = "0.3", optional = true }
+tinytemplate = { version = "1.1", optional = true }
 url = ">=1.7,<3"
-thiserror = "1.0.19"
-anyhow = "1.0.31"
-once_cell = "1.4.0"
+thiserror = "1.0"
+anyhow = "1.0"
+once_cell = "1.4"
 
 [dev-dependencies]
-actix-rt = "1.0"
+actix-rt = "1"
 actix-service = "1.0"
-actix-web = ">=2.0,<4"
+actix-web = { version = ">=2.0,<4", default-features = false }
 chrono_dev = { version = "0.4", features = ["serde"], package = "chrono" }
 futures = "0.3"
 uuid_dev = { version = "0.8", features = ["serde"], package = "uuid" }
 reqwest = { version = "0.10", features = ["blocking", "json"] }
 log = { version = "0.4", features = ["kv_unstable"] }
-insta = "0.16.1"
-env_logger = "0.7.1"
+insta = "0.16"
+env_logger = "0.7"
 
 [features]
 actix = ["paperclip-macros/actix", "paperclip-actix", "v2"]
 actix-nightly = ["actix", "paperclip-actix/nightly", "v2"]
 cli = ["env_logger", "structopt", "git2", "v2", "codegen"]
 codegen = ["heck", "http", "log", "regex", "tinytemplate", "paperclip-core/codegen"]
-# codegen-fmt = ["codegen", "rustfmt-nightly"]
 v2 = ["paperclip-macros/v2", "paperclip-core/v2"]
 
 # Features for implementing traits for dependencies.
@@ -68,7 +66,7 @@ actix-multipart = ["paperclip-core/actix-multipart"]
 chrono = ["paperclip-core/chrono"]
 rust_decimal = ["paperclip-core/rust_decimal"]
 uuid = ["paperclip-core/uuid"]
-serde_qs = ["paperclip-actix/serde_qs", "paperclip-core/serde_qs"]
+serde_qs = ["paperclip-core/serde_qs"]
 
 [workspace]
 members = [
