Add actix-session support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,7 @@ v2 = ["paperclip-macros/v2", "paperclip-core/v2"]
 
 # Features for implementing traits for dependencies.
 actix-multipart = ["paperclip-core/actix-multipart"]
+actix-session = ["paperclip-core/actix-session"]
 chrono = ["paperclip-core/chrono"]
 rust_decimal = ["paperclip-core/rust_decimal"]
 uuid = ["paperclip-core/uuid"]
