--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -13,6 +13,7 @@ repository = "https://github.com/wafflespeanut/paperclip"
 actix-web = { version = ">=2.0,<4", optional = true, default-features = false }
 actix-http = { version = ">=1.0,<3", optional = true }
 actix-multipart = { version = "0", optional = true }
+actix-session = { version = "0", optional = true }
 chrono = { version = "0", optional = true }
 heck = { version = "0.3", optional = true }
 once_cell = "1.4"
