--- a/plugins/actix-web/Cargo.toml
+++ b/plugins/actix-web/Cargo.toml
@@ -12,13 +12,17 @@ repository = "https://github.com/wafflespeanut/paperclip"
 [dependencies]
 futures = "0.3"
 actix-service = "1.0"
-actix-web = { version = ">=2.0,<4", default-features = false }
-paperclip-core = { path = "../../core", version = "0.2.2", features = ["actix"] }
+actix-web2 = { version = "2", default-features = false, optional = true, package = "actix-web" }
+actix-web3 = { version = "3", default-features = false, optional = true, package = "actix-web" }
+paperclip-core = { path = "../../core", version = "0.2.2", optional = true }
 paperclip-macros = { path = "../../macros", version = "0.3.2", features = ["actix"] }
 parking_lot = ">=0.10,<0.12"
 serde_json = "1.0"
 once_cell = "1.4"
 
 [features]
-nightly = ["paperclip-core/actix", "paperclip-core/nightly"]
+actix = ["actix3"]
+actix2 = ["actix-web2", "paperclip-core/actix2"]
+actix3 = ["actix-web3", "paperclip-core/actix3"]
+nightly = ["paperclip-core/nightly"]
 normalize = []
