--- a/plugins/actix-web/Cargo.toml
+++ b/plugins/actix-web/Cargo.toml
@@ -18,11 +18,12 @@ paperclip-macros = { path = "../../macros", version = "0.3.2", features = ["acti
 parking_lot = ">=0.10,<0.12"
 serde_json = "1.0"
 once_cell = "1.4.0"
-askama = { version = "0.10.3", optional = true }
+tinytemplate = { version = "1.1.0", optional = true }
+serde = { version = "1.0", optional = true }
 serde_qs = { version = "0.6", optional = true, features = ["actix"] }
 
 [features]
 nightly = ["paperclip-core/actix", "paperclip-core/nightly"]
 normalize = []
-swagger-ui = ["askama"]
+swagger-ui = ["tinytemplate", "serde"]
 qs = ["serde_qs"]
