--- a/.travis.yml
+++ b/.travis.yml
@@ -33,9 +33,10 @@ matrix:
     - cp -r book/_book/* target/doc/
   - name: check
     before_script:
+    - rustup toolchain install nightly
     - rustup component add rustfmt clippy
     script:
-    - cargo fmt --all -- --check
+    - cargo +nightly fmt --all -- --check
     - cargo clippy --all --features "actix" -- -D clippy::all
 
 deploy:
