--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,8 @@ matrix:
   - name: check
     before_script:
     - rustup toolchain install nightly
-    - rustup component add rustfmt clippy
+    - rustup component add rustfmt --toolchain nightly
+    - rustup component add clippy
     script:
     - cargo +nightly fmt --all -- --check
     - cargo clippy --all --features "actix" -- -D clippy::all
