--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ matrix:
   include:
   - name: test
     script:
-    - cargo test --all --features "actix cli chrono uuid"
+    - cargo test --all --features "actix cli"
+    - cargo test --all --features "actix cli chrono serde_qs uuid"
     - cd tests/test_k8s && cargo check
     - cd ../test_pet && cargo check
     - cd cli && CARGO_TARGET_DIR=../target cargo check
@@ -19,7 +20,7 @@ matrix:
     - rustup toolchain install nightly
     - rustup default nightly
     script:
-    - cargo test --all --features "actix-nightly cli chrono uuid"
+    - cargo test --all --features "actix-nightly cli chrono serde_qs uuid"
   - name: build
     script:
     - cargo build
