--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ matrix:
   include:
   - name: test
     script:
-    - cargo test --all --features "actix cli"
-    - cargo test --all --features "actix cli chrono serde_qs uuid"
+    - cargo test --all --features "actix3 cli"
+    - cargo test --all --features "actix3 cli chrono serde_qs uuid"
     - cd tests/test_k8s && cargo check
     - cd ../test_pet && cargo check
     - cd cli && CARGO_TARGET_DIR=../target cargo check
