--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,6 +72,7 @@ v2 = ["paperclip-macros/v2", "paperclip-core/v2"]
 # Features for implementing traits for dependencies.
 actix-multipart = ["paperclip-core/actix-multipart"]
 actix-session = ["paperclip-core/actix-session"]
+actix-files = ["paperclip-core/actix-files"]
 chrono = ["paperclip-core/chrono"]
 rust_decimal = ["paperclip-core/rust_decimal"]
 uuid = ["paperclip-core/uuid"]
