--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -14,6 +14,7 @@ actix-web2 = { version = "2", optional = true, default-features = false, package
 actix-web3 = { version = "3", optional = true, default-features = false, package = "actix-web" }
 actix-multipart = { version = "0", optional = true }
 actix-session = { version = "0", optional = true }
+actix-files = {version = "0", optional = true}
 chrono = { version = "0", optional = true }
 heck = { version = "0.3", optional = true }
 once_cell = "1.4"
