--- a/plugins/actix-web/Cargo.toml
+++ b/plugins/actix-web/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/wafflespeanut/paperclip"
 
 [dependencies]
 futures = "0.3"
+actix-files = {version = "0", optional = true}
 actix-service = "1.0"
 actix-web2 = { version = "2", default-features = false, optional = true, package = "actix-web" }
 actix-web3 = { version = "3", default-features = false, optional = true, package = "actix-web" }
