--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,8 @@ url = ">=1.7,<3"
 thiserror = "1.0"
 anyhow = "1.0"
 once_cell = "1.4"
+openapiv3 = { version = "0.4.0", optional = true }
+indexmap = { version = "1.0", features = ["serde-1", "std"], optional = true }
 
 [dev-dependencies]
 actix-rt = "1"
@@ -68,6 +70,9 @@ actix-base = ["v2", "paperclip-macros/actix"]
 cli = ["env_logger", "structopt", "git2", "v2", "codegen"]
 codegen = ["heck", "http", "log", "regex", "tinytemplate", "paperclip-core/codegen"]
 v2 = ["paperclip-macros/v2", "paperclip-core/v2"]
+# OpenAPI v2 to v3 support
+v3 = ["openapiv3", "indexmap", "v2", "paperclip-core/v3", "paperclip-actix/v3"]
+
 
 # Features for implementing traits for dependencies.
 actix-multipart = ["paperclip-core/actix-multipart"]
