--- a/plugins/actix-web/Cargo.toml
+++ b/plugins/actix-web/Cargo.toml
@@ -19,6 +19,7 @@ paperclip-macros = { path = "../../macros", version = "0.4.0", features = ["acti
 parking_lot = ">=0.10,<0.12"
 serde_json = "1.0"
 once_cell = "1.4"
+openapiv3 = { version = "0.4.0", optional = true }
 
 [features]
 actix = ["actix3"]
@@ -26,3 +27,4 @@ actix2 = ["actix-web2", "paperclip-core/actix2"]
 actix3 = ["actix-web3", "paperclip-core/actix3"]
 nightly = ["paperclip-core/nightly"]
 normalize = []
+v3 = ["openapiv3"]
