--- a/plugins/actix-web/Cargo.toml
+++ b/plugins/actix-web/Cargo.toml
@@ -21,7 +21,7 @@ serde_json = "1.0"
 once_cell = "1.4"
 tinytemplate = { version = "1.1", optional = true }
 serde = { version = "1.0", optional = true }
-snafu = "0.6"
+thiserror = "1.0"
 
 [features]
 actix = ["actix3"]
