Add swagger-ui feature
Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,6 +65,7 @@ actix2-nightly = ["actix2", "paperclip-actix/nightly"]
 actix2 = ["actix-base", "paperclip-actix/actix2"]
 actix3 = ["actix-base", "paperclip-actix/actix3"]
 actix-base = ["v2", "paperclip-macros/actix"]
+swagger-ui = ["paperclip-actix/swagger-ui"]
 
 # OpenAPI support (v2 and codegen)
 cli = ["env_logger", "structopt", "git2", "v2", "codegen"]
