--- a/plugins/actix-web/Cargo.toml
+++ b/plugins/actix-web/Cargo.toml
@@ -20,6 +20,7 @@ parking_lot = ">=0.10,<0.12"
 serde_json = "1.0"
 once_cell = "1.4"
 openapiv3 = { version = "0.4.0", optional = true }
+include_dir = { version = "0.6.1", optional = true }
 
 [features]
 actix = ["actix3"]
@@ -28,3 +29,4 @@ actix3 = ["actix-web3", "paperclip-core/actix3"]
 nightly = ["paperclip-core/nightly"]
 normalize = []
 v3 = ["openapiv3"]
+swagger-ui = ["include_dir"]
