--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ serde_json = "1.0"
 serde_yaml = "0.8"
 structopt = { version = "0.3", optional = true }
 tinytemplate = { version = "1.1", optional = true }
-url = ">=1.7,<3"
+url_dep = { version = ">=1.7,<3", package = "url" }
 thiserror = "1.0"
 anyhow = "1.0"
 once_cell = "1.4"
@@ -80,6 +80,7 @@ actix-session = ["paperclip-core/actix-session"]
 actix-files = ["paperclip-core/actix-files"]
 chrono = ["paperclip-core/chrono"]
 rust_decimal = ["paperclip-core/rust_decimal"]
+url = ["paperclip-core/url"]
 uuid = ["paperclip-core/uuid"]
 serde_qs = ["paperclip-core/serde_qs"]
 
