--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -28,6 +28,7 @@ regex = "1.3"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 serde_yaml = "0.8"
+url = { version = "2", optional = true }
 uuid = { version = "0", optional = true }
 thiserror = "1.0"
 serde_qs = { version = "0", optional = true }
