--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -50,6 +50,10 @@ jobs:
           path: target
           key: ${{ matrix.version }}-x86_64-unknown-linux-gnu-cargo-build-trimmed-${{ hashFiles('**/Cargo.lock') }}
 
+      - name: Init submodule
+        run: |
+          git submodule update --init --recursive
+
       - name: Run default tests
         uses: actions-rs/cargo@v1
         timeout-minutes: 40
