--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -13,9 +13,10 @@ repository = "https://github.com/paperclip-rs/paperclip"
 paperclip-macros = { path = "../macros", version = "0.5.0" }
 actix-web2 = { version = "2", optional = true, default-features = false, package = "actix-web" }
 actix-web3 = { version = "3", optional = true, default-features = false, package = "actix-web" }
+actix-web4 = { version = "4", optional = true, default-features = false, package = "actix-web" }
 actix-multipart = { version = "0", optional = true }
 actix-session = { version = "0", optional = true }
-actix-files = {version = "0", optional = true}
+actix-files = { version = "0", optional = true }
 chrono = { version = "0", optional = true }
 heck = { version = "0.4", optional = true }
 once_cell = "1.4"
@@ -37,9 +38,9 @@ indexmap = { version = "1.0", features = ["serde-1", "std"], optional = true }
 
 [features]
 # actix-web support
-actix = ["actix3"]
-actix2 = ["actix-base", "actix-web2"]
+actix4 = ["actix-base", "actix-web4"]
 actix3 = ["actix-base", "actix-web3"]
+actix2 = ["actix-base", "actix-web2"]
 actix-base = ["v2", "pin-project"]
 
 # Enable nightly if nightly compiler can be allowed
