--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,11 @@ version = "0.6.1"
 authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
 edition = "2018"
 description = "OpenAPI tooling library for type-safe compile-time checked HTTP APIs"
-documentation = "https://paperclip.waffles.space/paperclip"
+documentation = "https://paperclip-rs.github.io/paperclip/paperclip"
 keywords = ["openapi", "api", "swagger", "http", "web"]
 license = "MIT OR Apache-2.0"
-homepage = "https://github.com/wafflespeanut/paperclip"
-repository = "https://github.com/wafflespeanut/paperclip"
+homepage = "https://github.com/paperclip-rs/paperclip"
+repository = "https://github.com/paperclip-rs/paperclip"
 readme = "README.md"
 build = "src/build/build.rs"
 
