chore(docs): setup deployment to github pages

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,6 +1,9 @@
-name: cicd
+name: Build and Test
 
 on:
+  push:
+    branches:
+      - master
   pull_request:
   schedule:
     - cron: "0 7 * * *"
