chore(clippy): enable missing features

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -18,6 +18,8 @@ jobs:
           - nightly
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: recursive
       - uses: actions-rs/toolchain@v1
         with:
           components: clippy
@@ -26,7 +28,7 @@ jobs:
       - uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          args: --all --features "actix" -- -D clippy::all
+          args: --all --features "actix cli chrono url uuid swagger-ui v3" -- -D clippy::all
   
   fmt:
     name: rustfmt
