feat: allow adding the module path to the openapi component name (#373)
Allow adding the module path to the component name in order to avoid name collisions.
To enable this we a new feature called "path-in-definition" was added - simply enable that feature and the module name will be automatically added.

--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -28,3 +28,4 @@ strum_macros = { version = "0.23", optional = true }
 actix = ["heck", "http", "lazy_static", "strum", "strum_macros"]
 v2 = []
 nightly = []
+path-in-definition = []
