Add "open" keyword
I was searching for an "open api" implementation for Actix but I could'n find this project because the "open" keyword was missing.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
 edition = "2018"
 description = "OpenAPI tooling library for type-safe compile-time checked HTTP APIs"
 documentation = "https://paperclip-rs.github.io/paperclip/paperclip"
-keywords = ["openapi", "api", "swagger", "http", "web"]
+keywords = ["openapi", "open", "api", "swagger", "http", "web"]
 license = "MIT OR Apache-2.0"
 homepage = "https://github.com/paperclip-rs/paperclip"
 repository = "https://github.com/paperclip-rs/paperclip"
