--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -33,6 +33,10 @@ url = { version = "2", optional = true }
 uuid = { version = "0", optional = true }
 thiserror = "1.0"
 serde_qs = { version = "0", optional = true }
+actix-web-validator2 = { version = "2.2", optional = true, package = "actix-web-validator" }
+actix-web-validator3 = { version = "3.0", optional = true, package = "actix-web-validator" }
+validator12 = { version = "0.12", features = ["derive"], optional = true, package = "validator" }
+validator14 = { version = "0.14", features = ["derive"], optional = true, package = "validator" }
 openapiv3 = { version = "1.0.0-beta.5", optional = true }
 indexmap = { version = "1.0", features = ["serde-1", "std"], optional = true }
 
@@ -42,6 +46,8 @@ actix4 = ["actix-base", "actix-web4"]
 actix3 = ["actix-base", "actix-web3"]
 actix2 = ["actix-base", "actix-web2"]
 actix-base = ["v2", "pin-project"]
+actix3-validator = ["actix-web-validator2", "validator12"]
+actix4-validator = ["actix-web-validator3", "validator14"]
 
 # Enable nightly if nightly compiler can be allowed
 nightly = ["paperclip-macros/nightly"]
