chore(lint): run on both stable and nightly

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -15,6 +15,7 @@ jobs:
     strategy:
       matrix:
         rust:
+          - stable
           - nightly
     steps:
       - uses: actions/checkout@v2
@@ -36,6 +37,7 @@ jobs:
     strategy:
       matrix:
         rust:
+          - stable
           - nightly
     steps:
       - uses: actions/checkout@v2
