--- a/plugins/actix-web/Cargo.toml
+++ b/plugins/actix-web/Cargo.toml
@@ -32,3 +32,4 @@ nightly = ["paperclip-core/nightly"]
 normalize = []
 v3 = ["openapiv3", "paperclip-core/v3"]
 swagger-ui = ["include_dir"]
+rapidoc = ["include_dir"]
