--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -62,42 +62,42 @@ jobs:
         timeout-minutes: 10
         with:
           command: build
-          args: --all --features "actix4 cli chrono url uuid swagger-ui v3 actix4-validator"
+          args: --all --features "actix4 cli chrono url uuid swagger-ui rapidoc v3 actix4-validator"
 
       - name: Build actix3 features
         uses: actions-rs/cargo@v1
         timeout-minutes: 10
         with:
           command: build
-          args: --all --features "actix3 cli chrono url uuid swagger-ui v3 actix3-validator"
+          args: --all --features "actix3 cli chrono url uuid swagger-ui rapidoc v3 actix3-validator"
 
       - name: Build actix2 features
         uses: actions-rs/cargo@v1
         timeout-minutes: 10
         with:
           command: build
-          args: --all --features "actix2 cli chrono url uuid swagger-ui v3"
+          args: --all --features "actix2 cli chrono url uuid swagger-ui rapidoc v3"
 
       - name: Run actix tests
         uses: actions-rs/cargo@v1
         timeout-minutes: 20
         with:
           command: test
-          args: --all --features "actix4 cli chrono url uuid swagger-ui v3 actix4-validator"
+          args: --all --features "actix4 cli chrono url uuid swagger-ui rapidoc v3 actix4-validator"
 
       - name: Run actix3 tests
         uses: actions-rs/cargo@v1
         timeout-minutes: 20
         with:
           command: test
-          args: --all --features "actix3 cli chrono url uuid swagger-ui v3 actix3-validator"
+          args: --all --features "actix3 cli chrono url uuid swagger-ui rapidoc v3 actix3-validator"
 
       - name: Run actix2 tests
         uses: actions-rs/cargo@v1
         timeout-minutes: 20
         with:
           command: test
-          args: --all --features "actix2 cli chrono url uuid swagger-ui v3"
+          args: --all --features "actix2 cli chrono url uuid swagger-ui rapidoc v3"
 
       - name: Install cargo-cache
         continue-on-error: true
