--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,6 +76,7 @@ actix3 = ["actix-base", "paperclip-actix/actix3"]
 actix2 = ["actix-base", "paperclip-actix/actix2"]
 actix-base = ["v2", "paperclip-macros/actix"]
 swagger-ui = ["paperclip-actix/swagger-ui"]
+rapidoc = ["paperclip-actix/rapidoc"]
 path-in-definition = ["paperclip-macros/path-in-definition"]
 
 # OpenAPI support (v2 and codegen)
