--- a/plugins/actix-web/Cargo.toml
+++ b/plugins/actix-web/Cargo.toml
@@ -23,6 +23,7 @@ serde_json = "1.0"
 once_cell = "1.4"
 openapiv3 = { version = "1.0.0-beta.5", optional = true }
 include_dir = { version = "0.7.2", optional = true }
+tinytemplate = { version = "1.1", optional = true }
 
 [features]
 actix2 = ["actix-web2", "actix-service1", "paperclip-core/actix2"]
@@ -32,4 +33,4 @@ nightly = ["paperclip-core/nightly"]
 normalize = []
 v3 = ["openapiv3", "paperclip-core/v3"]
 swagger-ui = ["include_dir"]
-rapidoc = ["include_dir"]
+rapidoc = ["tinytemplate"]
