ci: disable fail-fast so we can get more results from a run
Signed-off-by: Tiago Castro <tiagolobocastro@gmail.com>

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -13,6 +13,7 @@ jobs:
     name: clippy
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         rust:
           - stable
@@ -35,6 +36,7 @@ jobs:
     name: rustfmt
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         rust:
           - stable
