Add support for jiff

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,6 +93,7 @@ actix-files = ["paperclip-core/actix-files"]
 actix3-validator = ["paperclip-core/actix3-validator"]
 actix4-validator = ["paperclip-core/actix4-validator"]
 chrono = ["paperclip-core/chrono"]
+jiff = ["paperclip-core/jiff"]
 rust_decimal = ["paperclip-core/rust_decimal"]
 url = ["paperclip-core/url"]
 uuid = ["uuid0","uuid1"]
