feat: add `preserve_order` feature to keep struct fields order in schema
Fixes #538

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,6 +76,7 @@ actix-base = ["v2", "paperclip-macros/actix"]
 swagger-ui = ["paperclip-actix/swagger-ui"]
 rapidoc = ["paperclip-actix/rapidoc"]
 path-in-definition = ["paperclip-macros/path-in-definition"]
+preserve_order = ["paperclip-core/preserve_order"]
 
 # OpenAPI support (v2 and codegen)
 cli = ["env_logger", "structopt", "git2", "v2", "codegen"]
