--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -18,6 +18,7 @@ actix-session = { version = "0", optional = true }
 actix-identity = { version = "0", optional = true }
 actix-files = { version = "0", optional = true }
 chrono = { version = "0.4", optional = true }
+indexmap = { version = "2", optional = true }
 jiff = { version = "0.1.5", optional = true }
 heck = { version = "0.4", optional = true }
 once_cell = "1.4"
@@ -57,6 +58,7 @@ nightly = ["paperclip-macros/nightly"]
 v2 = ["paperclip-macros/v2"]
 v3 = ["v2", "openapiv3"]
 codegen = ["v2", "heck", "log"]
+preserve_order = ["dep:indexmap", "indexmap/serde", "serde_json/preserve_order"]
 uuid = ["uuid0"]
 uuid0 = ["uuid0_dep"]
 uuid1 = ["uuid1_dep"]
